--- a/src/index.html
+++ b/src/index.html
@@ -13,16 +13,12 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+    <div class="container">
+      <div class="sentences">
+        <h2>OMG! You will not believe me but...</h2>
+      </div>
+      <div class="dynamic">
+        <h2 id="excuse">A lonely jogger kicked my sandwich on the street.</h2>
       </div>
     </div>
   </body>
